# gmod_wasm

./: .gitignore  Cargo.toml  README.md  gmod-plugin.code-workspace
crates/gmod-sys/: Cargo.toml
crates/gmod-sys/src/: lib.rs  lua_wrapper.rs  wrapper.cpp  wrapper.hpp
crates/lua-wasmer-common/: Cargo.toml
crates/lua-wasmer-common/src/: lib.rs  rpc.rs
crates/lua-wasmer-interface/: Cargo.toml
crates/lua-wasmer-interface/src/: lib.rs
gmod-sys/: Cargo.toml  build.rs
gmod-wasm/: Cargo.toml
gmod-wasm/src/: main.rs
lua-wasmer-common/src/: err.rs  rpc.rs
lua-wasmer-interface/: Cargo.toml
lua-wasmer-interface/src/: lib.rs
src/: global_state.rs  lib.rs  lua_interface.rs  wasm.rs
wasm-server/: Cargo.toml
wasm-server/src/: global_state.rs  lib.rs  main.rs  wasm.rs
wasm-server/tests/: instance.rs
