[package]
name = "gmod_wasm"
version = "0.1.0"
authors = ["MechWipf <MechWipf@googlemail.com>"]
edition = "2018"

[lib]
name = "gmsv_wasm_win64"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmod-sys = { version="*", path="crates/gmod-sys" }
wasmer = "1.0.0-alpha"
wasmer-compiler-singlepass = "1.0.0-alpha"
wasmer-compiler-cranelift = "1.0.0-alpha"
thiserror = "1.0.21"
