[package]
name = "gmod_wasm"
version = "0.1.0"
authors = ["MechWipf <MechWipf@googlemail.com>"]
edition = "2018"

[lib]
name = "gmsv_wasm_win64"
crate-type = ["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmod-sys = { version="*", path="crates/gmod-sys" }
wasmer = "1.0.0-alpha3"
wasmer-engine = "1.0.0-alpha3"
wasmer-compiler-cranelift = "1.0.0-alpha3"
thiserror = "1.0"
uuid = { version="0.8", features = [ "v4" ] }
futures = "0.3"
serde = "1.0"
fibers_rpc = "0.3"
fibers = "0.1.13"
bytecodec = "0.4.13"

