[package]
name = "gmod-sys"
version = "0.1.0"
authors = ["MechWipf <MechWipf@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0.61"

[dependencies]
thiserror = "1.0.21"
